# visualizer-template-public

./: .eslintrc.json  .stylelintrc.json  AGENTS.md  Build-Server.ps1  LICENSE  Start-Server.ps1  index.html  middleware.js  out0000.txt  package.json  problem_description.txt  readme.md  tsconfig.json
.agents/skills/: make-visualizer.md
.agents/skills/make-visualizer/: SKILL.md
.claude/commands/: make-visualizer.md
src/: App.tsx  global.d.ts  main.tsx  types.ts
src/components/: AHCLikeVisualizer.tsx  InitWasm.tsx
src/components/Description/: index.tsx
src/components/FileUploader/: index.tsx
src/components/InputOutput/: hooks.ts  index.module.css  index.tsx
src/components/SaveButtons/: gif.d.ts  index.tsx
src/components/SvgViewer/: index.tsx
src/components/TurnSlider/: index.module.css  index.tsx
src/routes/: index.tsx
tools/: .gitignore  Cargo.toml
tools/src/: io.rs  lib.rs  vis.rs
tools/src/io/: helpers.rs
tools/src/vis/: helpers.rs
wasm/: Cargo.toml
wasm/src/: impl_vis.rs  lib.rs  util.rs
