[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.8.5", features = ["small_rng"] }
rand_chacha = "=0.3.1"
rand_distr = "=0.4.3"
itertools = "=0.12.1"
proconio = { version = "=0.4.5", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
svg = "0.15.0"
anyhow = "1.0.79"
thiserror = "1.0.56"
