[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.90"
web-sys = { "version" = "0.3.67", features = ['console'] }
tools = { path = "../tools" }
anyhow = "1.0.79"
getrandom = { version = "0.2.12", features = ["js"] }
